correlation plot running

--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -964,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualization (t-SNE and PCA)"
+    "## Extracting relevant biomarkers"
    ]
   },
   {
@@ -997,32 +997,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(96, 866256)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amroa\\AppData\\Local\\Temp\\ipykernel_27856\\2379796171.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data.dropna(subset=cg_columns, inplace=True)  # assuming you want to drop rows with missing methylation data\n"
+     ]
     }
    ],
    "source": [
-    "# Select columns starting with 'cg' and the columns for color coding\n",
+    "# Only columns starting with 'cg' since these are the methylation data and the columns for color coding which are horvath age and fasting stage\n",
     "cg_columns = [col for col in merged_df.columns if col.startswith('cg')]\n",
     "relevant_columns = cg_columns + ['Timepoint', 'Score.horvath']\n",
     "data = merged_df[relevant_columns]\n",
     "\n",
     "# Handle missing values if necessary\n",
-    "data.dropna(subset=cg_columns, inplace=True)  # assuming you want to drop rows with missing methylation data\n",
+    "data.dropna(subset=cg_columns, inplace=True)  # assuming you want to drop rows with missing methylation data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((96, 863308), (96, 866256))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape, merged_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amroa\\AppData\\Local\\Temp\\ipykernel_27856\\3666453963.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data[col] = pd.to_numeric(data[col], errors='coerce')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cg_columns = [col for col in data.columns if col.startswith('cg')]\n",
+    "# Cast all columns to float\n",
+    "for col in cg_columns + ['Score.horvath']:\n",
+    "    data[col] = pd.to_numeric(data[col], errors='coerce') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cg_columns = [col for col in data.columns if col.startswith('cg')]\n",
+    "correlations = data[cg_columns].corrwith(data['Score.horvath']).sort_values(ascending=False)\n",
     "\n",
-    "# Scale the methylation data (important for PCA)\n",
-    "scaler = StandardScaler()\n",
-    "scaled_data = scaler.fit_transform(data[cg_columns])"
+    "# Select top 30 correlations\n",
+    "top_correlations = correlations.head(30)\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "top_correlations.plot(kind='bar')\n",
+    "plt.title('Top 30 Correlations with Score.horvath')\n",
+    "plt.xlabel('Columns')\n",
+    "plt.ylabel('Correlation Coefficient')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
