--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -19,13 +19,22 @@
     "import numpy as np\n",
     "import scipy.stats\n",
     "from scipy.stats import ttest_rel\n",
-    "\n",
     "# For plotting style and resolution\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import seaborn as sns\n",
     "from sklearn.decomposition import PCA\n",
-    "from cycler import cycler\n",
+    "from cycler import cycler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
     "line_cycler   = (cycler(color=[\"#E69F00\", \"#56B4E9\", \"#009E73\", \"#0072B2\", \"#D55E00\", \"#CC79A7\", \"#F0E442\"]) +\n",
     "                 cycler(linestyle=[\"-\", \"--\", \"-.\", \":\", \"-\", \"--\", \"-.\"]))\n",
     "marker_cycler = (cycler(color=[\"#E69F00\", \"#56B4E9\", \"#009E73\", \"#0072B2\", \"#D55E00\", \"#CC79A7\", \"#F0E442\"]) +\n",
@@ -992,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -2739,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {
     "metadata": {}
    },
@@ -4430,15 +4439,8 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "corr = df.corr()\n",
-    "\n",
     "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
-    "\n",
     "masked_corr = np.ma.masked_where(mask, corr)\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -4457,10 +4459,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "probes = [el for el in merged_df.columns.values if el.startswith(\"cg\") or el.startswith(\"ch\")]\n",
+    "betas = merged_df[probes].iloc[0, :].values #  for first person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "df_sample = pd.DataFrame({\n",
+    "    'probes': probes,\n",
+    "    'beta': betas\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>probes</th>\n",
+       "      <th>beta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cg07881041</td>\n",
+       "      <td>0.915499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cg23229610</td>\n",
+       "      <td>0.876176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cg03513874</td>\n",
+       "      <td>0.912605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cg05451842</td>\n",
+       "      <td>0.115954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cg14797042</td>\n",
+       "      <td>0.954318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>866233</th>\n",
+       "      <td>cg10218605</td>\n",
+       "      <td>0.414216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>866234</th>\n",
+       "      <td>cg06899844</td>\n",
+       "      <td>0.082461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>866235</th>\n",
+       "      <td>cg22494081</td>\n",
+       "      <td>0.951737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>866236</th>\n",
+       "      <td>cg22623303</td>\n",
+       "      <td>0.969829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>866237</th>\n",
+       "      <td>cg21064505</td>\n",
+       "      <td>0.972860</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>866238 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            probes      beta\n",
+       "0       cg07881041  0.915499\n",
+       "1       cg23229610  0.876176\n",
+       "2       cg03513874  0.912605\n",
+       "3       cg05451842  0.115954\n",
+       "4       cg14797042  0.954318\n",
+       "...            ...       ...\n",
+       "866233  cg10218605  0.414216\n",
+       "866234  cg06899844  0.082461\n",
+       "866235  cg22494081  0.951737\n",
+       "866236  cg22623303  0.969829\n",
+       "866237  cg21064505  0.972860\n",
+       "\n",
+       "[866238 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "df_sample['probes'] = df_sample['probes'].astype(str)\n",
+    "df_sample['beta'] = df_sample['beta'].astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "df_sample.to_csv(\"sample_values.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
