--- a/cfffprize_buchinger.ipynb
+++ b/cfffprize_buchinger.ipynb
@@ -12,6 +12,8 @@
     "import pandas as pd\n",
     "from sklearn.linear_model import ElasticNetCV\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from cycler import cycler"
    ]
   },
@@ -74,18 +76,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "metadata": {}
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -2218,13 +2208,6 @@
    "source": [
     "pd.DataFrame(buch_cols_p).to_csv(\"buch_cols_p.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
