--- a/kaggle_training.ipynb
+++ b/kaggle_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -13,7 +13,11 @@
     "from sklearn.linear_model import ElasticNetCV\n",
     "import matplotlib.pyplot as plt\n",
     "import csv\n",
-    "from cycler import cycler"
+    "import joblib\n",
+    "from cycler import cycler\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "metadata": {}
    },
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "metadata": {}
    },
@@ -428,7 +432,7 @@
        "[31992 rows x 6267 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "metadata": {}
    },
@@ -450,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "metadata": {}
    },
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {
     "metadata": {}
    },
@@ -849,7 +853,7 @@
        "[6267 rows x 31992 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "metadata": {}
    },
@@ -1074,7 +1078,7 @@
        "[5 rows x 31992 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "metadata": {}
    },
@@ -1123,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
     "metadata": {}
    },
@@ -1135,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "metadata": {}
    },
@@ -1236,7 +1240,7 @@
        "[6266 rows x 1 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -1296,19 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -1327,6 +1319,29 @@
     "print(\"scaled data\")\n",
     "pca = PCA(n_components=0.9)  # n_components=0.9 to keep 90% of the variance\n",
     "principal_components = pca.fit_transform(scaled_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pca_custom.pkl']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler, 'scaler_custom.pkl')\n",
+    "joblib.dump(pca, 'pca_custom.pkl')"
    ]
   },
   {
@@ -1837,19 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import ElasticNetCV\n",
-    "from sklearn.model_selection import cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "metadata": {}
    },
@@ -1950,7 +1953,7 @@
        "[6266 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "metadata": {}
    },
@@ -2292,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {
     "metadata": {}
    },
@@ -2303,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "metadata": {}
    },
@@ -2325,13 +2328,46 @@
        "SVR(kernel='linear')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "svr_model.fit(principal_components, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['svr_model.pkl']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(svr_model, 'svr_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "np.save(\"cols.npy\", train_x_T.columns.values)"
    ]
   },
   {
@@ -3566,13 +3602,6 @@
     "    writer = csv.writer(file)\n",
     "    writer.writerow(ages_buch)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
