include dependencies in readme

--- a/kaggle_set.ipynb
+++ b/kaggle_set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "metadata": {}
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
@@ -902,7 +902,7 @@
        "[8233 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -1088,7 +1088,7 @@
        "[6266 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "metadata": {
     "metadata": {}
    },
@@ -1109,16 +1109,16 @@
     {
      "data": {
       "text/plain": [
-       "(3314, 2884)"
+       "(3314, 2884, {'F', 'M', nan})"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(healthy_map_train['gender'].values == 'F'), sum(healthy_map_train['gender'].values == 'M')"
+    "sum(healthy_map_train['gender'].values == 'F'), sum(healthy_map_train['gender'].values == 'M'), set(healthy_map_train['gender'].values)"
    ]
   },
   {
